<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- General strings -->
    <string name="continue_txt">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>


    <!-- Login screen strings -->
    <string name="enter_email">Email address</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_title">Login</string>
    <string name="login_subtitle">Please sign in to continue.</string>
    <string name="field_is_required">Required field!</string>

    <!-- Welcome screen strings -->
    <string name="welcome">Welcome</string>
    <string name="login_successful">Login successful</string>
    <string name="login_successful_subtitle">You have successfully signed into your account. You can now continue using the product.</string>
    <string name="user">User: %s</string>

    <!-- Instructions screen strings -->
    <string name="instructions">Instructions</string>
    <string name="guide">Shoe Size Guide</string>
    <string name="guide_details">To take your measurements: \n\n1. Stand against a wall, heels touching the wall. \n2. Put an object (e.g book…) against your longest toe. \n3. Measure the length between the wall and the object. \n4. Repeat this process for the other foot. \n5. If the lengths are different, choose the largest.</string>

    <!-- Shoe list screen strings -->
    <string name="pick_shoes">Model Picker</string>
    <string name="navigate_to_detail">See details</string>
    <string name="logout_menu">Logout</string>

    <!-- Shoe details screen strings -->
    <string name="shoe_details">Add New Model</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Description</string>

    <!-- Shoe item layout strings -->
    <string name="list_item_shoe_name">%s</string>
    <string name="list_item_shoe_company">Company: %s</string>
    <string name="list_item_shoe_size">Size: %s</string>
    <string name="list_item_shoe_description">%s</string>

</resources>
