<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.fragments.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.fragments.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment" />
        <argument
            android:name="user"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.fragments.InstructionFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instruction" >
        <action
            android:id="@+id/action_instructionFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.fragments.ShoeListFragment"
        android:label="@string/pick_shoes"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.fragments.ShoeDetailFragment"
        android:label="@string/shoe_details"
        tools:layout="@layout/fragment_shoe_detail">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>