<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!-- Constraint layout
    for vertically and horizontally aligned views.
     That way we avoid linear layout nesting -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".fragments.LoginFragment">

        <TextView
            android:id="@+id/tv_login_title"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/login_title"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_login_subtitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_login_subtitle"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/actor"
            android:text="@string/login_subtitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/ti_email"
            app:layout_constraintStart_toStartOf="@+id/tv_login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            app:layout_constraintBottom_toTopOf="@+id/ti_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_password"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_email"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_sign_up"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toStartOf="@+id/btn_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_sign_in" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/ti_password" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/login_title"
            android:src="@drawable/laces1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>