<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodel.ShoeViewModel" />

        <variable
            name="fragment"
            type="com.udacity.shoestore.fragments.ShoeDetailFragment" />
    </data>

    <!-- Constraint layout
    for vertically and horizontally aligned views.
     That way we avoid linear layout nesting -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="32dp"
        tools:context=".fragments.ShoeDetailFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_name"
                android:text="@={shoe.name}"
                android:maxLines="1"
                tools:text="Lite Racer Adapt" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_company_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_company"
                android:text="@={shoe.company}"
                android:maxLines="1"
                tools:text="adidas" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_size_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_size"
                android:text="@={`` + shoe.size}"
                android:maxLines="1"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_description_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/shoe_description"
                android:text="@={shoe.description}"
                android:inputType="textMultiLine|textShortMessage"
                tools:text="These stylish trainers with EVA midsole provides support which lasts many strolls and jogs" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_save"
            android:onClick="@{() -> fragment.cancelShoeDetails()}"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:onClick="@{() -> viewModel.addNewShoe(shoe)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>