<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!-- Constraint layout for vertically aligned views.
     Using chains allow us to properly group and align views
     at the right place -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".fragments.WelcomeFragment">

        <TextView
            android:id="@+id/tv_user"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/actor"
            android:gravity="center"
            android:text="@string/user"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_login_success"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_success"
            app:layout_constraintStart_toStartOf="@+id/tv_login_success"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_success"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/login_successful"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_login_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_login_subtitle"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/actor"
            android:gravity="center"
            android:text="@string/login_successful_subtitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_continue"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_success"
            app:layout_constraintStart_toStartOf="@+id/tv_login_success"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_success" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_success"
            app:layout_constraintStart_toStartOf="@+id/tv_login_success"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_subtitle" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/login_successful"
            android:src="@drawable/laces2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>